# EVM

./: .gitignore  CMakeLists.txt  README.md
assembler/: CMakeLists.txt
assembler/asm2byte/: CMakeLists.txt  asm2byte.cpp  asm2byte.h  class.h  class_section.h  code_section.h  emittable.h  example.easm  header.h  instruction.h  line.h  main.cpp  string_pool.h  tokenizer.h
common/: CMakeLists.txt  config.h  constants.h  crc32.h  emittable.h  logs.h  macros.h  opcode_to_str.cpp  opcode_to_str.h  str_to_opcode.cpp  str_to_opcode.h
common/utils/: bitops.h  crc32.h  string_operations.cpp  string_operations.h
examples/: benchmark.ea  benchmark.ts  solve_square.h  test.ea  test.ts
file_format/: class_section.h  code_section.h  file.h  header.h  instruction.h  string_pool.h
interpreter/: CMakeLists.txt  frame.cpp  frame.h  interpreter-inl.h  interpreter.cpp  interpreter.h  reg.h
isa/: CMakeLists.txt  generate.py  isa.def  isa.yaml  macros.h  opcodes.h  regs.h
memory/: CMakeLists.txt  class_structure.h  frame.cpp  frame.h  heap_manager.cpp  heap_manager.h  mark_word.h  object_header.h  reg.h
memory/allocator/: CMakeLists.txt  allocator.h  bump_allocator.cpp  bump_allocator.h
memory/types/: CMakeLists.txt  array-inl.h  array.cpp  array.h  string.cpp  string.h
runtime/: CMakeLists.txt  runtime.cpp  runtime.h
runtime/interpreter/: interpreter-inl.h  interpreter.cpp  interpreter.h
runtime/memory/: class_description.h  class_manager.cpp  class_manager.h  field.h  frame.cpp  frame.h  heap_manager.cpp  heap_manager.h  mark_word.h  object_header.h  reg.h  type.h
runtime/memory/allocator/: allocator.h  bump_allocator.cpp  bump_allocator.h  freelist_allocator.cpp  freelist_allocator.h
runtime/memory/garbage_collector/: gc_base.h  gc_incremental.cpp  gc_incremental.h  gc_stw.cpp  gc_stw.h
runtime/memory/types/: array.cpp  array.h  class.cpp  class.h  string.cpp  string.h
tests/: CMakeLists.txt  interpreter_test.cpp
tests/assembler/: CMakeLists.txt
tests/interpreter/: CMakeLists.txt  interpreter_test.cpp
tests/memory/: CMakeLists.txt  array_test.cpp  bump_allocator_test.cpp  freelist_allocator_test.cpp
vm/: CMakeLists.txt  evm.cpp  vm.cpp  vm.h
